--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1>我的第一篇播客</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style>
+		body{
+			background: skyblue;
+		}
+		p{
+			font-size: 150px;
+			text-align: center;
+			font-weight: 900;
+			color: skyblue;
+
+			/* 过渡 */
+			transition: all 1s;
+		}
+		p:hover{
+			/* text-shadow: 0px 0px 10px orange; */
+
+			/* 浮雕文字
+				使用两种影子 围出文字
+			 */
+			 text-shadow: -1px -1px black,
+			 1px 1px white;
+		}
+	</style>
+</head>
+<body>
+	<p>
+		冯立武臭sb
+	</p>
+</body>
+</html>
